@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="utf-8"?>
+<Product xmlns='http://code.google.com/p/open-zwave/'>
+    <!--MCOHome (Zipato) MH-P210 Mini Energy Dimmer -->
+    <!-- Configuration -->
+    <CommandClass id="112">
+        <Value type="byte" genre="config" instance="1" index="1" label="Report" size="1" value="0">
+            <Help>
+                Bit 0: KWH Report
+                Bit 1: Voltage Report
+                Bit 2: Current Report
+                Bit 3: Watt Report
+                (Bit Set to 1: enable 0:disable)
+            </Help>
+        </Value>
+        <Value type="short" genre="config" instance="1" index="2" label="Interval time" size="2" min="0" max="65535" units="second" value="600">
+            <Help>0 to 65535 second.
+            </Help>
+        </Value>
+    </CommandClass>
+
+    <!-- Association Groups -->
+    <CommandClass id="133">
+        <Associations num_groups="2">
+            <Group index="1" max_associations="5" label="Unsolicited report" auto="false"/>
+            <Group index="2" max_associations="1" label="Lifeline" auto="true"/>
+        </Associations>
+    </CommandClass>
+</Product>
