@@ -106,6 +106,7 @@ Version 1.5
  - Add GR GR105 Auto Valve config file (Nechry)
  - Add NodOn MSP-3-1-XX Micro Smart Plug from sarakha63 (Nechry)
  - Add Zipato PH-PAB01.eu Micromodule Energy Meter (Nechry)
+ - Add Zipato MH-P210 Mini Energy Dimmer, Mcohome branded (Nechry)
 
 Version 1.4
  - Released 10th Jan, 2016
